// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoanReasonField /> matches snapshot 1`] = `
<select
  class="sc-dIUggk hhFmtN"
  id="loanReasonField"
  name="name"
  type="text"
>
  <option
    class="sc-dmlrTW hequYp"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="bills"
  >
    rachunki
  </option>
  <option
    value="other_loans"
  >
    inne pożyczki
  </option>
  <option
    value="vacation"
  >
    wakacje
  </option>
  <option
    value="education"
  >
    edukacja
  </option>
  <option
    value="car"
  >
    samochód
  </option>
  <option
    value="medical_expenses"
  >
    wydatki zdrowotne
  </option>
  <option
    value="renovation"
  >
    renowacja
  </option>
  <option
    value="electronics"
  >
    elektronika
  </option>
  <option
    value="furniture"
  >
    meble
  </option>
  <option
    value="other"
  >
    inne
  </option>
  <option
    value="investment"
  >
    inwestycja
  </option>
  <option
    value="tax_payment"
  >
    spłata podatków
  </option>
</select>
`;

exports[`<LoanReasonField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk jigzeI"
          id="loanReasonField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="bills"
          >
            rachunki
          </option>
          <option
            value="other_loans"
          >
            inne pożyczki
          </option>
          <option
            value="vacation"
          >
            wakacje
          </option>
          <option
            value="education"
          >
            edukacja
          </option>
          <option
            value="car"
          >
            samochód
          </option>
          <option
            value="medical_expenses"
          >
            wydatki zdrowotne
          </option>
          <option
            value="renovation"
          >
            renowacja
          </option>
          <option
            value="electronics"
          >
            elektronika
          </option>
          <option
            value="furniture"
          >
            meble
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="investment"
          >
            inwestycja
          </option>
          <option
            value="tax_payment"
          >
            spłata podatków
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<LoanReasonField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk hhFmtN"
          id="loanReasonField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="bills"
          >
            rachunki
          </option>
          <option
            value="other_loans"
          >
            inne pożyczki
          </option>
          <option
            value="vacation"
          >
            wakacje
          </option>
          <option
            value="education"
          >
            edukacja
          </option>
          <option
            value="car"
          >
            samochód
          </option>
          <option
            value="medical_expenses"
          >
            wydatki zdrowotne
          </option>
          <option
            value="renovation"
          >
            renowacja
          </option>
          <option
            value="electronics"
          >
            elektronika
          </option>
          <option
            value="furniture"
          >
            meble
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="investment"
          >
            inwestycja
          </option>
          <option
            value="tax_payment"
          >
            spłata podatków
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<LoanReasonField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk jigzeI"
          id="loanReasonField"
          name="name"
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="bills"
          >
            rachunki
          </option>
          <option
            value="other_loans"
          >
            inne pożyczki
          </option>
          <option
            value="vacation"
          >
            wakacje
          </option>
          <option
            value="education"
          >
            edukacja
          </option>
          <option
            value="car"
          >
            samochód
          </option>
          <option
            value="medical_expenses"
          >
            wydatki zdrowotne
          </option>
          <option
            value="renovation"
          >
            renowacja
          </option>
          <option
            value="electronics"
          >
            elektronika
          </option>
          <option
            value="furniture"
          >
            meble
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="investment"
          >
            inwestycja
          </option>
          <option
            value="tax_payment"
          >
            spłata podatków
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
